feat[swag] 更新swag与前端同步
